[tool.poetry]
name = "lx-scanner-backend"
version = "0.1.0"
description = ""
authors = ["Gorkem Kacar <g.kacar@digitastic.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.11.2"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.6"
bandit = "^1.7.9"
flask = "^3.0.3"
pydantic = "^2.8.2"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
