[tool.poetry]
name = "lx-scanner-backend"
version = "0.1.0"
description = ""
authors = ["izofat <gorkemkacar12@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
lx-scanner-backend = "app:app"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.11.2"
asyncio = "^3.4.3"
bandit = "^1.7.9"
black = "^24.8.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
pytest = "^8.3.2"
mysql-connector-python = "^9.0.0"
pydash = "^8.0.3"
toml = "^0.10.2"
flask = "^3.0.3"
jupyter = "^1.1.1"
pylint = "^3.2.7"
pydantic = "^2.8.2"
bcrypt = "^4.2.0"
pika = "^1.3.2"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
